# grafton-auth

./: Cargo.toml  README.md  build.rs
migrations/: 20231108213118_init.sql
src/: lib.rs
src/app/: builder.rs  hybrid.rs  mod.rs
src/app/middleware/: file.rs  session.rs
src/error/: mod.rs
src/model/: mod.rs  user.rs
src/oauth2/: backend.rs  mod.rs
src/rbac/: mod.rs  oso.rs
src/util/: config.rs
src/web/: mod.rs  protected_app.rs
src/web/router/: auth.rs  login.rs  logout.rs  mod.rs  protected.rs
templates/: login.html  protected.html  provider.html
