[package]
name = "grafton-auth"
version = "0.1.0"
authors = ["Grant Sparks <grant@grafton.ai>"]
edition = "2021"
description = "The Auth layer for grafton-server"
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton-auth"
homepage = "https://www.grafton.ai"
categories = ["network-programming", "web-programming"]
keywords = ["api", "web", "http", "server", "networking", "ai"]
publish = false
readme = "README.md"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "build.rs",
    "examples/**/*",
    "migrations/**/*",
    "templates/**/*",
    "src/**/*",
]

[features]
default = ["rbac", "graphql"]
graphql = []
grpc = ["tonic"]
rbac = ["oso"]

[dependencies]
askama_axum = "*"
derivative = "2"
oauth2 = "4"
oxide-auth = "*"
oxide-auth-axum = "*"
tokio-rustls = "*"
serde_json = "1"
typed-builder = "*"
thiserror = "1"
time = "*"
url = "2"

[dependencies.grafton-config]
path = "../grafton-config"

[dependencies.grafton-server]
path = "../grafton-server"

[dependencies.askama]
features = ["with-axum"]
version = "*"

[dependencies.axum]
features = ["macros", "json"]
version = "0.7.4"

[dependencies.axum-login]
version = "*"

[dependencies.reqwest]
features = ["json"]
version = "*"

[dependencies.hyper]
features = ["http1", "http2", "server"]
version = "1"

[dependencies.hyper-util]
features = ["tokio", "server-auto"]
version = "*"

[dependencies.oso]
features = ["uuid-10"]
optional = true
version = "*"

[dependencies.pki-types]
package = "rustls-pki-types"
version = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
features = ["sqlite", "time", "runtime-tokio"]
version = "*"

[dependencies.strum]
features = ["derive"]
version = ">=0.26.1"

[dependencies.tokio]
features = ["signal", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["transport", "tls"]
optional = true
version = "*"

[dependencies.tower]
features = ["util"]
version = "*"

[dependencies.tower-http]
features = ["fs"]
version = "*"

[dev-dependencies]
tempfile = "3"
